Fix bug #81642: DOMChildNode::replaceWith() bug when replacing a node with itself

Closes GH-11363.